fix of addon to site>

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hello bro!</title>
 </head>
 <body>
-<h1>hello bro! What do you think of my name!</h1>
+<h1>hello bro! What do you think of my name?</h1>
 </body>
 </html>
